updating to Version 3.1.0, using 3.1.0 dependencies and all are available within the public maven repository.