@@ -1,16 +1,21 @@
 import de.fraunhofer.iais.eis.BaseConnector;
 import de.fraunhofer.iais.eis.BaseConnectorBuilder;
 import de.fraunhofer.iais.eis.CatalogBuilder;
+import de.fraunhofer.iais.eis.SecurityProfile;
 import de.fraunhofer.iais.eis.util.ConstraintViolationException;
 import org.junit.Assert;
 import org.junit.Test;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 import static de.fraunhofer.iais.eis.util.Util.asList;
 
 public class InstantiateInfomodelClass {
+
+    private String inbound = "3.1.0";
+
 
     @Test(expected = ConstraintViolationException.class)
     public void createInvalidConnectorDescription() {
@@ -18,13 +23,14 @@ public class InstantiateInfomodelClass {
     }
 
     @Test
-    public void createConnectorDescription() throws MalformedURLException {
+    public void createConnectorDescription() {
         BaseConnector instantiatedConnectorDescription = new BaseConnectorBuilder()
-                ._maintainer_(new URL("http://www.iais.fraunhofer.de/"))
-                ._curator_(new URL("http://www.iais.fraunhofer.de/"))
+                ._maintainer_(URI.create("http://www.iais.fraunhofer.de/"))
+                ._curator_(URI.create("http://www.iais.fraunhofer.de/"))
                 ._catalog_(new CatalogBuilder().build())
-                ._outboundModelVersion_("1.0.2")
-                ._inboundModelVersions_(asList("1.0.2"))
+                ._outboundModelVersion_(inbound)
+                ._inboundModelVersion_(asList(inbound))
+                ._securityProfile_(SecurityProfile.BASE_CONNECTOR_SECURITY_PROFILE)
                 .build();
 
         Assert.assertNotNull(instantiatedConnectorDescription);
