@@ -5,8 +5,7 @@ import org.junit.Test;
 import javax.xml.datatype.DatatypeConfigurationException;
 import javax.xml.datatype.DatatypeFactory;
 import javax.xml.datatype.XMLGregorianCalendar;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.Date;
 import java.util.GregorianCalendar;
 
@@ -14,19 +13,21 @@ import static de.fraunhofer.iais.eis.util.Util.asList;
 
 public class Validation {
 
+    private String inbound = "3.1.0";
+
     @Test(expected = ConstraintViolationException.class)
-    public void violateCustomURLValidation() throws MalformedURLException {
+    public void violateCustomURLValidation()  {
         new BaseConnectorBuilder()
-                ._maintainer_(new URL("http://www.iais.fraunhofer.de/"))
-                ._curator_(new URL("http://www.iais.fraunhofer.de/unknownTarget"))
+                ._maintainer_(URI.create("http://www.iais.fraunhofer.de/"))
+                ._curator_(URI.create("http://www.iais.fraunhofer.de/unknownTarget"))
                 ._catalog_(new CatalogBuilder().build())
-                ._outboundModelVersion_("1.0.2")
-                ._inboundModelVersions_(asList("1.0.2"))
+                ._outboundModelVersion_(inbound)
+                ._inboundModelVersion_(asList(inbound))
                 .build();
     }
 
     @Test(expected = ConstraintViolationException.class)
-    public void violateSecurityTokenValidation() throws MalformedURLException, DatatypeConfigurationException {
+    public void violateSecurityTokenValidation() throws DatatypeConfigurationException {
         System.setProperty("doValidateToken", "true");
 
         GregorianCalendar c = new GregorianCalendar();
@@ -34,10 +35,10 @@ public class Validation {
         XMLGregorianCalendar now = DatatypeFactory.newInstance().newXMLGregorianCalendar(c);
 
         new ConnectorAvailableMessageBuilder()
-                ._issuerConnector_(new URL("http://www.iais.fraunhofer.de"))
+                ._issuerConnector_(URI.create("http://www.iais.fraunhofer.de"))
                 ._issued_(now)
-                ._modelVersion_("1.0.2")
-                ._securityToken_(new TokenBuilder()
+                ._modelVersion_(inbound)
+                ._securityToken_(new DynamicAttributeTokenBuilder()
                         ._tokenValue_("akjfsajfaskfjdsaf")
                         ._tokenFormat_(TokenFormat.JWT)
                         .build())
